style(layout): set sidebar gap to 8em; fix clearfix not to clear element; ensure .page floats left on large screens

--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -43,8 +43,6 @@
 */
 
 @mixin clearfix {
-  clear: both;
-
   &::after {
     clear: both;
     content: "";
