--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -16,7 +16,7 @@
   @include breakpoint($large) {
     @include span(3 of 12);
     float: right;
-    margin-left: 3em;
+    margin-left: 8em;
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
